style: fix colors for dark mode

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -226,4 +226,8 @@
   .syno__item {
     background-color: var(--col-background-prmy);
   }
+
+  .HeaderBtnIcon {
+    color: var(--col-text-prmy);
+  }
 }
